# inventory

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  inventory_constants.h.in  inventory_qt_interface.cpp  inventory_qt_interface.h  inventory_qt_interface.qrc  inventory_qt_interface.ui  inventory_qt_interface.ui.in  main.cpp  urls.py
polls/: admin.py  models.py  urls.py  views.py
templates/: 404.html  500.html
templates/admin/: base_site.html
templates/polls/: detail.html  index.html  results.html
